--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           java-version: 1.8
 
-      - run: ./gradlew check
+      - run: ./gradlew build
 
   publish:
     needs: check
